test/fails/bad_parsing/extern_out_of_order2.lgl
void main() {
    declare int f();
    return;
}